-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001140: CLI-Script to associate a graph template to a host
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Fix compatibility issues for RRDTool 1.3
-feature: Make the tabs section work a little better with existing plugins
-feature: Add additional options to speed data query graph automation process
-feature: Add additional indexes to speed data query graph creation
-feature: Allow the cli reindexing of hosts to be limited to a single query
-feature: New cli command host_update_template to allow re-templating of hosts using an updated template
-feature: When reindexing hosts, allow a queryid to be specified
-feature: Add command line Database upgrade script
-feature: Add api call to associate graphs with their data sources

0.8.7b
-bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
-bug#0001083: Small visual fix for Cacti in "View Cacti Log File"
-bug#0001089: Graph xport modification to increase default rows output
-bug#0001091: Poller incorrectly identifies unique hosts
-bug#0001093: CLI Scripts bring MySQL down on large installations
-bug#0001094: Filtering broken on Data Sources page
-bug#0001103: Fix looping poller recache events
-bug#0001107: ss_fping.php 100% "Pkt Loss" does not work properly